Dark mode fixed

--- a/src/components/styles/index.scss
+++ b/src/components/styles/index.scss
@@ -226,7 +226,7 @@
       }
 
       .additional_text {
-        opacity: 0.2;
+        opacity: 0.8;
       }
     }
 
